pm profile in the panel as that of the administrator

--- a/app/src/js/app/components/dashboard/views/indexView.html
+++ b/app/src/js/app/components/dashboard/views/indexView.html
@@ -4,7 +4,7 @@
             <a class="imm-bc-item">{{ 'dashboard.title' | translate }}</a>
         </h1>
         <div class="imm-bc" ng-if="tracks.length">
-            <a class="imm-bc-item" ng-if="userRole == 'admin' || userRole == 'developer'">{{ 'dashboard.current_tracks' | translate }}</a>
+            <a class="imm-bc-item" ng-if="userRole == 'admin' || userRole == 'developer' || userRole == 'pm'">{{ 'dashboard.current_tracks' | translate }}</a>
             <!-- <a class="imm-bc-item" ng-if="userRole == 'developer'">{{ 'dashboard.recent_activity' | translate }}</a> -->
         </div>
     </div>
@@ -23,7 +23,7 @@
         <tbody>
             <tr ng-repeat="track in tracks" ng-if="!track.endTime || track.endTime == '0000-00-00 00:00:00'">
                 <td>{{track.userName}}</td>
-                <td><a ng-if="userRole == 'admin'"  style="color: #4a90e2; text-decoration: underline" ui-sref="app.projectEdit({id: track.idProyecto})" target="_blank">{{track.projectName | truncateTail:true:30:'...'}}</a></td>
+                <td><a ng-if="userRole == 'admin' || userRole == 'pm'"  style="color: #4a90e2; text-decoration: underline" ui-sref="app.projectEdit({id: track.idProyecto})" target="_blank">{{track.projectName | truncateTail:true:30:'...'}}</a></td>
             	<td ng-if="userRole != 'admin'">{{track.projectName}}</td>
                 <td>{{track.taskName}}</td>
                 <td>{{track.startTime | date:'dd/MM/yyyy HH:mm' }}</td>
