--- a/app/src/js/app/components/calendar/views/definirHorarioFijo.modal.html
+++ b/app/src/js/app/components/calendar/views/definirHorarioFijo.modal.html
@@ -40,10 +40,10 @@
 
                     </thead>
                     <tbody>
-                        <tr ng-if='diaSeleccionado.selected.name == h.name' ng-repeat='h in mostrarInfo'>
+                        <tr ng-if='diaSeleccionado.selected.name.toLowerCase() == h.name.toLowerCase()' ng-repeat= '(index, h) in mostrarInfo'>
                             <td title='{{h.name}}'>{{h.name}}</td>
                             <td title='{{h.desde}}{{h.hasta}}'>{{h.desde}}-{{h.hasta}}</td>
-                            <td> <a class="close" ng-click="eliminarRegistro()">
+                            <td> <a class="close" ng-click="eliminarRegistro(index)">
                                     <img src="assets/images/icons/delete_entry-ico.svg"></i></a></td>
                         </tr>
                     </tbody>
