Calendario Version Agosto

--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -1141,4 +1141,31 @@ section {
 .calTools{
 	margin-bottom: 10px;
 }
+
+.fc-toolbar {
+    text-transform: capitalize;
+    
+}
+
+.fc button {
+    display: inline-block;
+    padding: .0625rem 1rem;
+    line-height: 2rem;
+    height: 2.125rem;
+    font-size: .8rem;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    color: #ffffff;
+    background: #181A1C;
+    border-bottom: 1px solid #000001;
+    transition: background-color 0.2s ease-in, border-color 0.2s ease-in;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border-radius: 0px;
+}
   
