--- a/app/src/js/app/components/calendar/views/calendarView.html
+++ b/app/src/js/app/components/calendar/views/calendarView.html
@@ -31,5 +31,5 @@
 </br>
 </br>
 
-
+<div class="new-title-calendar">{{currentMonthText}}</div>
 <div class="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar='calendar' >
