--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -1146,7 +1146,14 @@ section {
     text-transform: capitalize;
     
 }
-
+.fc-toolbar .fc-center{
+    display:none;
+}
+.new-title-calendar{
+    text-align: center;
+    font-weight: 800;
+    font-size: 27px;
+}
 .fc button {
     display: inline-block;
     padding: .0625rem 1rem;
