--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -1150,6 +1150,7 @@ section {
     display:none;
 }
 .new-title-calendar{
+    text-transform: capitalize;
     text-align: center;
     font-weight: 800;
     font-size: 27px;
