--- a/app/src/js/app/components/calendar/views/calendarView.html
+++ b/app/src/js/app/components/calendar/views/calendarView.html
@@ -1,12 +1,10 @@
-<!-- <div class="btn-group calTools">
-    AGREGAR EVENTO
-    <button type="button" class="btn btn-primary" ng-click="addEvent()"> + </button>
-    <button class="btn btn-success" ng-click="changeView('month', 'calendar')">Mes</button>
-    <button class="btn btn-success" ng-click="changeView('agendaWeek', 'calendar')">Semana</button>
-</div> -->
 
+<div class="preload" ng-show="loading" 
+style="display: flex; justify-content:center; position: fixed;width: 100%;height: 100vh;background-color: #7a78782e;z-index: 10000; left:0;top:0">
+  <img style=" width: 3%" src="assets/images/spinner.svg"></i></div>
 <div class="imm-modal__cnt">
   <div class="imm-frm__fldgrp">
+
     <div style="width: 150px;" ng-if="userRole=='admin' || userRole == 'pm' ">
       <label class="imm-frm__lbl">
         <b class="imm-frm__lbl-name">{{ 'calendar.user' | translate }}</b>
@@ -23,13 +21,9 @@
         </ui-select>
       </label>
     </div>
-    
   </div>
 </div>
-
-
 </br>
 </br>
-
 <div class="new-title-calendar">{{currentMonthText}}</div>
 <div class="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar='calendar' >
