--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -805,23 +805,23 @@
           <tr>
             <td>{{ 'reports.manual' | translate}}</td>
             <td>{{total}}</td>
-            <td>{{totalCostManualPesos}}</td>
-            <td>{{totalCostManualReales}}</td>
-            <td>{{totalCostManualDolares}}</td>
+            <td>{{totalCostManualPesos.toFixed(2)}}</td>
+            <td>{{totalCostManualReales.toFixed(2)}}</td>
+            <td>{{totalCostManualDolares.toFixed(2)}}</td>
           </tr>
           <tr>
             <td>{{ 'reports.trello' | translate}}</td>
             <td>{{total3}}</td>
-            <td>{{totalCostTrelloPesos}}</td>
-            <td>{{totalCostTrelloReales}}</td>
-            <td>{{totalCostTrelloDolares}}</td>
+            <td>{{totalCostTrelloPesos.toFixed(2)}}</td>
+            <td>{{totalCostTrelloReales.toFixed(2)}}</td>
+            <td>{{totalCostTrelloDolares.toFixed(2)}}</td>
           </tr>
           <tr style="background-color: rgba(59, 144, 190, 0.43); font-weight: bold; ">
             <td>{{ 'reports.total' | translate | uppercase}}</td>
             <td>{{totalDuration}}</td>
-            <td>{{totalCostPesos}}</td>
-            <td>{{totalCostReales}}</td>
-            <td>{{totalCostDolares}}</td>
+            <td>{{totalCostPesos.toFixed(2)}}</td>
+            <td>{{totalCostReales.toFixed(2)}}</td>
+            <td>{{totalCostDolares.toFixed(2)}}</td>
           </tr>
 
 
