--- a/app/src/js/app/components/calendar/views/calendarView.html
+++ b/app/src/js/app/components/calendar/views/calendarView.html
@@ -13,7 +13,8 @@ style="display: flex; justify-content:center; position: fixed;width: 100%;height
         class="imm-select imm-select--input" 
         theme="selectize"
         title="{{ 'calendar.users' | translate }}" append-to-body="true"
-        on-select= 'callCalendar()'>
+        on-select= 'callCalendar()'
+        >
           <ui-select-match> {{$select.selected.name}} </ui-select-match>
           <ui-select-choices repeat="user.id as user in users | filter: $select.search">
             <div ng-bind-html="user.name | highlight: $select.search"></div>
