feat: implementation admin middleware calendar [stable]

--- a/app/src/js/app/components/tasks/views/dashboardView.html
+++ b/app/src/js/app/components/tasks/views/dashboardView.html
@@ -15,14 +15,14 @@
                 <b class="imm-wa__lbl">{{ 'Tareas Manuales' }}</b>
             </a>
         </div>
-        <div class="imm-cstm__grid imm-cstm__cntr">
+        <!-- <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.tasks_automatic">
                 <div class="imm-cstm__grid-25-two">
                     <img src="/assets/catalogos/cuentas.svg">
                 </div>
                 <b class="imm-wa__lbl">{{ 'navigation.tasks_automatic' | translate }}</b>
             </a>
-        </div>
+        </div> -->
         <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.tasks_trello">
                 <div class="imm-cstm__grid-25-two">
@@ -31,7 +31,7 @@
                 <b class="imm-wa__lbl">{{ 'navigation.tasks_trello' | translate }}</b>
             </a>
         </div>
-        <div class="imm-cstm__grid imm-cstm__cntr">
+        <!-- <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.jira">
                 <div class="imm-cstm__grid-25-two">
                     <img src="/assets/images/Jira-PBXDom.png" style="margin-bottom: 14px">
@@ -46,5 +46,5 @@
                 </div>
                 <b class="imm-wa__lbl">{{ 'navigation.taskManager' | translate }}</b>
             </a>
-        </div>
+        </div> -->
 </div>
