--- a/app/src/js/app/components/CRM/views/dashboardView.html
+++ b/app/src/js/app/components/CRM/views/dashboardView.html
@@ -15,14 +15,14 @@
                 <b class="imm-wa__lbl">{{ 'navigation.bank' | translate }}</b>
             </a>
         </div>
-        <div class="imm-cstm__grid imm-cstm__cntr">
+        <!-- <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.budgets">
                 <div class="imm-cstm__grid-25-two">
                     <img src="/assets/catalogos/presupuestos.svg">
                 </div>
                 <b class="imm-wa__lbl">{{ 'navigation.budget' | translate }}</b>
             </a>
-        </div>
+        </div> -->
 
 
         <!-- <div class="imm-cstm__grid imm-cstm__cntr">
@@ -35,14 +35,14 @@
         </div> -->
 
 
-        <div class="imm-cstm__grid imm-cstm__cntr">
+        <!-- <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.hoursCost">
                 <div class="imm-cstm__grid-25-two">
                     <img src="/assets/catalogos/evolucion.svg">
                 </div>
                 <b class="imm-wa__lbl">{{ 'navigation.hour-cost' | translate }}</b>
             </a>
-        </div>
+        </div> -->
 
         <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.finances">
