--- a/app/src/js/app/components/projects/views/projectFormView.html
+++ b/app/src/js/app/components/projects/views/projectFormView.html
@@ -95,6 +95,23 @@
                 </label>
             </div>
 
+            <div class="imm-frm__fld">  
+                <label class="imm-frm__lbl">
+                    <ui-select
+                            ng-model="project.active"
+                            class="imm-select imm-select--input"
+                            theme="selectize"
+                            append-to-body="true"
+                    >
+                        <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="option.value as option in [{name:'Active', value: 1}, {name:'Inactive', value: 0}]">
+                            <div ng-bind-html="option.name | highlight: $select.selected.name" value="option.value"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                    <b class="imm-frm__lbl-name">Active</b>
+                </label>
+            </div>
+
             <div class="imm-frm__fld" ng-if="project.id">
                 <label class="imm-frm__lbl">
                     <button class="imm-btn" ui-sref="app.taskForm({id: project.id})">{{ 'projects.add_task' | translate }}</button>
