hide app and translate keys to english

--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -39,9 +39,9 @@
         <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.CRM">
             <i class="imm-icon imm-icon--catalogos-ico"></i> <span ng-show="!thisHide">{{ 'CRM'}}</span>
         </a>
-        <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.apps">
+        <!-- <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.apps">
             <i class="imm-icon imm-icon--catalogos-ico"></i> <span ng-show="!thisHide">{{ 'APP’s'}}</span>
-        </a>
+        </a> -->
 
     </nav>
 
